@@ -1,3 +1,4 @@
+2019. 9.25. Added dz_tf2zeropole. [app]
 2019. 9.25. Added dzTFZeroPole and dzTFZeroPoleReIm. [dz_tf]
 2019. 9.25. Modified dzTFCreateZeroPole to accept co-conjugate complex zeros and poles. [dz_tf]
 2019. 9.24. Added dz_frconv. [app]
